Fixed hostRegion not showing up in database.  Minor improvements in code organization and readability.  Started ipInfo.php file to list charachteristics of given detected ip address.  Replace the bad getLogYear function.

--- a/fbstyle.css
+++ b/fbstyle.css
@@ -45,6 +45,8 @@ line-height:1;
 
 column-span: all;
 
+text-decoration:underline;
+
 }
 
 
